@@ -1,4 +1,5 @@
 3.0.163.alpha.1 - 1st November 2023
+- For 'Enhance tooltip' ('Interface'), the scale slider now applies to the game settings panel tooltips.
 - Added flight times.
 
 3.0.162 - 1st November 2023
